<resources>
    <string name="app_name">Trippy</string>
    <string name="create_new_account">Create New Account</string>
    <string name="log_in">Login now!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_navigation_title">Profile</string>
    <string name="search_navigation">Search</string>
    <string name="add_trip">Add Trip</string>
    <string name="add_location">Add location</string>
    <string name="save">Save</string>
    <string name="toggle_private">Private</string>
    <string name="edit_image">Edit Image</string>
    <string name="search_trip">Search trips</string>
    <string name="dates_title">Dates:</string>
    <string name="participants_title">Participants:</string>
    <string name="profile_header">Profile</string>
    <string name="owner_title">Owner:</string>
</resources>