<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_acitivity_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".View.Home.MainActivity">


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/app_tab_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tabIconTint="@color/primary_color"
        app:tabIndicatorColor="@color/primary_color"
        app:tabTextColor="@color/primary_color">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/profile_navigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_user"
            android:text="@string/profile_navigation_title" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/search_navigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_search"
            android:text="@string/search_navigation" />

    </com.google.android.material.tabs.TabLayout>

    <fragment
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@+id/app_tab_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/nav_graph" />

    <EditText
        android:id="@+id/app_logo_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:focusable="false"
        android:inputType="textPersonName"
        android:text="@string/app_name"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/current_page_label"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="43dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/app_logo_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/current_page_label"
        app:srcCompat="@drawable/ic_app_logo" />

    <TextView
        android:id="@+id/current_page_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat"
        android:hint="Page Name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
